fixed left navbar overlap

--- a/css/spinoffs.css
+++ b/css/spinoffs.css
@@ -27,6 +27,7 @@ nav.navbar{
 }
 
 #leftNav ul li{
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
